--- a/index.html
+++ b/index.html
@@ -4,24 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <title>Assignment 1</title>
+    <title>Grade Checker</title>
 </head>
 <body>
+    <div style="width:100%;height:60px;"><a href="index.html">Grade checker</a> <a href="speedchecker.html"> Speed Checker</a> <a href="salary.html">Salary Calculator</a></div>
     <div style="width:100%;">
         <div class="holder">
             <div style="font-weight:bold;"><h4>Grade Calculator</h4></div>
             <p><div class="btn"><button style="font-weight:bold;background:green;width:100px;height:30px;" onclick="getgrade()">Get Grade</button></div></p>
-            <p id="gradearea"></p>
-        </div>
-    </div>
-    <div style="width:100%;">
-        <div class="holder">
-            <div style="font-weight:bold;font-family:Arial, Helvetica, sans-serif;text-align: center;"><h4>Speed Checker</h4></div>
-        </div>
-    </div>
-    <div style="width:100%;">
-        <div class="holder">
-            <div style="font-weight:bold;font-family:Arial, Helvetica, sans-serif;text-align: center;"><h4>Salary Calculator</h4></div>
+            <p id="gradearea" style="font-weight: bold;"></p>
         </div>
     </div>
 <script src="js/javascript.js"></script>
