--- a/salary.html
+++ b/salary.html
@@ -7,6 +7,7 @@
     <title>Salary Calculator</title>
 </head>
 <body>
+    <div style="width:100%;height:60px;"><a href="index.html">Grade checker</a> <a href="speedchecker.html"> Speed Checker</a> <a href="salary.html">Salary Calculator</a></div>
     <div style="width:100%;">
         <div class="holder">
             <div style="font-weight:bold;"><h4>Salary Calculator</h4></div>
