added benefit input

--- a/salary.html
+++ b/salary.html
@@ -14,6 +14,9 @@
                 <p> Enter Gross Salary<br>
                 <input type="number" min="0" name="salary" id="salary" placeholder="salary" style="height:30px;width:300px;">
                 </p>
+                <p> Enter Benefits<br>
+                    <input type="number" min="0" name="salary" value="0" id="benefit" placeholder="Benefits" style="height:30px;width:300px;">
+                    </p>
             <p><div class="btn"><button style="font-weight:bold;background:green;width:150px;height:30px;" onclick="calculateSalary()">Get Statement</button></div></p>
             <p id="netsalary" style="font-weight:bold;"></p>
         </div>
